// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> should render as <Modal> when mocked 1`] = `
<Modal
  hardwareAccelerated={false}
  visible={true}
>
  <View />
</Modal>
`;

exports[`<Modal /> should render as <RCTModalHostView> when not mocked 1`] = `
<RCTModalHostView
  animationType="none"
  hardwareAccelerated={false}
  identifier={1}
  onStartShouldSetResponder={[Function]}
  presentationStyle="fullScreen"
  style={
    Object {
      "position": "absolute",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flex": 1,
          "left": 0,
          "top": 0,
        },
        Object {
          "backgroundColor": "white",
        },
      ]
    }
  >
    <View
      pointerEvents="box-none"
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        collapsable={true}
        pointerEvents="box-none"
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View />
      </View>
    </View>
  </View>
</RCTModalHostView>
`;

exports[`<Modal /> should shallow render as <Component> when mocked 1`] = `
<Component
  hardwareAccelerated={false}
  visible={true}
>
  <View />
</Component>
`;

exports[`<Modal /> should shallow render as <Modal> when not mocked 1`] = `
<Modal
  hardwareAccelerated={false}
  visible={true}
>
  <View />
</Modal>
`;
